[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Carrot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pineapple.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Puke.ogg" type="AudioStream" id=6]
[ext_resource path="res://apple_bite.ogg" type="AudioStream" id=7]
[ext_resource path="res://Background1.png" type="Texture" id=8]
[ext_resource path="res://SC_Couch_Potato_FULL_Loop.wav" type="AudioStream" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 480, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 4 )
pineapple_scene = ExtResource( 3 )
carrot_scene = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="PineappleTimer" type="Timer" parent="."]

[node name="CarrotTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 360, 240 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 720, 0 )
rotation = 1.5708

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Puke" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Eat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
pitch_scale = 1.3

[node name="BGS" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[connection signal="eat" from="Player" to="." method="_on_Player_eat"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="PineappleTimer" to="." method="_on_PineappleTimer_timeout"]
[connection signal="timeout" from="CarrotTimer" to="." method="_on_CarrotTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
